WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269941
AX: Assert crash in AXIsolatedObject::relativeFrame.
https://bugs.webkit.org/show_bug.cgi?id=269941
Summary
AX: Assert crash in AXIsolatedObject::relativeFrame.
Andres Gonzalez
Reported
2024-02-22 13:33:58 PST
(lldb) bt * thread #7, name = 'com.apple.accessibility.secondary', stop reason = EXC_BAD_ACCESS (code=1, address=0xbbadbeef) frame #0: 0x000000013c0b2e48 JavaScriptCore`::WTFCrash() at Assertions.cpp:351:35 frame #1: 0x000000032914c774 WebCore`WTFCrashWithInfo((null)=1644, (null)="/Users/ag/s/web/OpenSource/Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp", (null)="virtual bool WebCore::AXIsolatedObject::isMockObject() const", (null)=2278) at Assertions.h:780:5 frame #2: 0x00000003294a6cc0 WebCore`WebCore::AXIsolatedObject::isMockObject(this=0x00000001050e02c0) const at AXIsolatedObject.cpp:1644:5 * frame #3: 0x00000003294a6860 WebCore`WebCore::AXIsolatedObject::relativeFrame(this=0x00000001050e02c0) const at AXIsolatedObject.cpp:1286:60 frame #4: 0x00000003294ac818 WebCore`WebCore::AXIsolatedObject::size(this=0x00000001050e02c0) const at AXIsolatedObject.h:228:67 frame #5: 0x000000032ca4598c WebCore`-[WebAccessibilityObjectWrapper accessibilityAttributeValue:](self=0x0000000145c3b560, _cmd="accessibilityAttributeValue:", attributeName="AXSize") at WebAccessibilityObjectWrapperMac.mm:1759:62
Attachments
Patch
(1.89 KB, patch)
2024-02-22 13:36 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(1.89 KB, patch)
2024-02-22 16:19 PST
,
Andres Gonzalez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-22 13:34:07 PST
<
rdar://problem/123466894
>
Andres Gonzalez
Comment 2
2024-02-22 13:36:45 PST
Created
attachment 470019
[details]
Patch
Andres Gonzalez
Comment 3
2024-02-22 16:19:56 PST
Created
attachment 470021
[details]
Patch
EWS
Comment 4
2024-02-22 17:43:51 PST
Committed
275212@main
(aef2df021f71): <
https://commits.webkit.org/275212@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470021
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug