AX: Assert crash in AXIsolatedObject::relativeFrame. https://bugs.webkit.org/show_bug.cgi?id=269941 <rdar://problem/123466894>

Reviewed by Chris Fleizach.

AXIsolatedObject::relativeFrame should not call isMOckObject() because this method always return false and asserts in debug builds.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::relativeFrame const):

Canonical link: https://commits.webkit.org/275212@main